--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,13 @@
   font-family: "Poppins", sans-serif;
 }
 
+:root {
+  --white:#fff;
+  --white2:#fff;
+  --black:#333;
+  --black2:rgb(75, 74, 74);
+}
+
 body {
   overflow-x: hidden;
 }
@@ -20,13 +27,10 @@ section {
   width: calc(100% - 300px);
   left: 300px;
   min-height: 100vh;
-  background-color: black;
-  /* background: url(./bg.jpg);
-  background-size: cover; */
-  /* display: flex;
-  align-items: center; */
+  background-color: var(--black);
   overflow-x: hidden;
   transition: 0.5s;
+  background-color: var(--black2);
 }
 .main.active {
   left: 0;
@@ -45,7 +49,7 @@ section {
   z-index: 10000;
   transition: 0.5s;
   border-bottom: solid 1px rgba(255, 255, 255, 0.1);
-  background-color: black;
+  background-color: var(--black);
 }
 .main .topBar.active {
   left: 0;
@@ -54,7 +58,7 @@ section {
 .main .topBar .logo {
   position: relative;
   font-weight: 700;
-  color: white;
+  color: var(--white);
   text-decoration: none;
   font-size: 2em;
   text-transform: uppercase;
@@ -73,7 +77,7 @@ section {
   top: 7px;
   width: 100%;
   height: 2px;
-  background: #ffffff;
+  background: var(--white);
   transition: 0.2s;
 }
 .main .topBar #toggle::after {
@@ -82,7 +86,7 @@ section {
   bottom: 7px;
   width: 100%;
   height: 2px;
-  background: white;
+  background: var(--white);
 }
 .main .banner {
   display: flex;
@@ -113,7 +117,7 @@ section {
   object-fit: cover;
 }
 .main .banner .content h2 {
-  color: #fff;
+  color: var(--white);
   font-size: 2.5em;
 }
 .main .banner .content h2 span {
@@ -122,7 +126,7 @@ section {
 }
 .main .banner .content p {
   font-size: 1.2em;
-  color: #fff;
+  color: var(--white);
   font-weight: 300;
 }
 .main .banner .content .btn {
@@ -130,8 +134,8 @@ section {
   display: inline-block;
   width: 210px;
   margin-top: 20px;
-  background: #fff;
-  color: #000;
+  background: var(--white);
+  color: var(--black);
   padding: 10px 30px;
   text-decoration: none;
   text-align: center;
@@ -148,7 +152,7 @@ section {
   position: relative;
   display: flex;
   margin: 20px;
-  color: white;
+  color: var(--white);
 }
 .main .banner .content .socialMedia li {
   list-style: none;
@@ -157,7 +161,7 @@ section {
   display: inline-block;
   width: 40px;
   height: 40px;
-  background-color: white;
+  background-color: var(--white);
   margin: 5px;
   display: flex;
   justify-content: center;
@@ -167,29 +171,21 @@ section {
 }
 .main .banner .content .socialMedia li a:hover {
   background: gray;
-  color: whitesmoke;
+  color: var(--white);
 }
-.main .aPropos {
-  position: relative;
-  min-height: 100vh;
-  padding: 0 40px;
-  padding-top: 80px;
-  background: black;
-  color: blanchedalmond;
-  display: inline-block;
-}
-.main .aPropos .titre {
+.main .titre {
   text-align: center;
   width: 100%;
+  color: var(--white);
 }
-.main .aPropos .titre h2 {
+.main .titre h2 {
   position: relative;
   text-transform: uppercase;
   letter-spacing: 2px;
   font-size: 1.2em;
   margin-bottom: 30px;
 }
-.main .aPropos .titre h2::before {
+.main .titre h2::before {
   content: "";
   position: absolute;
   left: 50%;
@@ -197,7 +193,119 @@ section {
   bottom: -10px;
   width: 50px;
   height: 1px;
-  background: white;
+  background: var(--white);
+}
+.main .aPropos {
+  position: relative;
+  min-height: 100vh;
+  padding: 0 40px;
+  padding-top: 80px;
+  color: var(--white);
+  display: inline-block;
+}
+.main .aPropos .content {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+.main .aPropos .content .textBox {
+  width: 49%;
+  min-width: 49%;
+}
+.main .aPropos .content .imgBox {
+  margin-left: 40px;
+}
+.main .aPropos .content .imgBox img {
+  max-width: 100%;
+  border-radius: 20px;
+}
+.main .services {
+  color: var(--white);
+  position: relative;
+  min-height: 100vh;
+  padding: 0 40px;
+  padding-top: 80px;
+}
+.main .services .title {
+  text-align: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.main .services .content {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin: 40px 0;
+  gap: 20px;
+}
+.main .services .content .serviceBox {
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  padding: 50px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.main .services .content .serviceBox img {
+  max-width: 50px;
+  filter: invert(1);
+}
+.main .services .content .serviceBox h2 {
+  font-size: 1.1em;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-weight: 600;
+  color: var(--white);
+  text-align: center;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+.main .services .content .serviceBox p {
+  text-align: center;
+}
+.main .portfolio {
+  color: var(--white);
+  padding: 0 40px;
+  padding-top: 80px;
+}
+.main .portfolio .content {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin: 40px 0;
+}
+.main .portfolio .content .slideBox {
+  position: relative;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: 200px;
+  min-width: 200px;
+  overflow-y: hidden;
+}
+.main .portfolio .content .slideBox .imgBox img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.main .portfolio .content .slideBox .textBox {
+  position: absolute;
+  top: 100%;
+  min-height: 100%;
+  min-width: 100%;
+  background-color: yellow;
+  transition: top 0.5s, background-color 1s;
+}
+.main .portfolio .content .slideBox:hover .textBox {
+  position: absolute;
+  top: 0;
+  min-height: 100%;
+  min-width: 100%;
+  background-color: #2600ff;
 }
 
 #navigation {
@@ -206,7 +314,7 @@ section {
   left: 0px;
   width: 300px;
   height: 100vh;
-  background: #000000;
+  background: var(--black);
   border-right: solid 1px rgba(255, 255, 255, 0.1);
   z-index: 1;
   display: grid;
@@ -225,7 +333,7 @@ section {
   list-style: none;
 }
 #navigation ul li a {
-  color: #fff;
+  color: var(--white);
   text-decoration: none;
   display: inline-block;
   font-size: 1.6em;
