--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,10 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+  scroll-behavior: smooth;
 }
 
 :root {
@@ -27,80 +29,114 @@ section {
   width: calc(100% - 300px);
   left: 300px;
   min-height: 100vh;
-  background-color: var(--black);
+  background-color: var(--white);
   overflow-x: hidden;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
-  background-color: var(--black2);
 }
+
 .main.active {
   left: 0;
   width: 100%;
 }
+
 .main .topBar {
   position: fixed;
   top: 0;
   left: 300px;
   width: calc(100% - 300px);
   height: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 0px 40px;
   z-index: 10000;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
-  border-bottom: solid 1px rgba(255, 255, 255, 0.1);
-  background-color: var(--black);
+  border-bottom: solid 1px rgba(10, 3, 3, 0.2);
+  background-color: var(--white);
 }
+
 .main .topBar.active {
   left: 0;
-  width: 100%;
+  width: calc(100%);
 }
+
 .main .topBar .logo {
   position: relative;
   font-weight: 700;
-  color: var(--white);
+  color: var(--black);
   text-decoration: none;
   font-size: 2em;
   text-transform: uppercase;
   letter-spacing: 2px;
+  -webkit-transition: 0.6s;
   transition: 0.6s;
 }
+
 .main .topBar #toggle {
   position: relative;
   width: 30px;
   height: 30px;
   cursor: pointer;
 }
+
 .main .topBar #toggle::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 7px;
   width: 100%;
   height: 2px;
-  background: var(--white);
+  background: var(--black);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
+
 .main .topBar #toggle::after {
-  content: "";
+  content: '';
   position: absolute;
   bottom: 7px;
   width: 100%;
   height: 2px;
-  background: var(--white);
+  background: var(--black);
 }
+
 .main .banner {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 0 20px;
 }
+
 .main .banner .content {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
+
 .main .banner .content .imgBox {
   display: relative;
   height: 200px;
@@ -109,75 +145,96 @@ section {
   overflow: hidden;
   margin-bottom: 20px;
 }
+
 .main .banner .content .imgBox img {
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
+
 .main .banner .content h2 {
-  color: var(--white);
+  color: var(--black);
   font-size: 2.5em;
 }
+
 .main .banner .content h2 span {
-  color: #40c3FF;
+  color: var(--black);
   font-size: 1.2em;
 }
+
 .main .banner .content p {
   font-size: 1.2em;
-  color: var(--white);
+  color: var(--black);
   font-weight: 300;
 }
+
 .main .banner .content .btn {
   position: relative;
   display: inline-block;
   width: 210px;
   margin-top: 20px;
-  background: var(--white);
-  color: var(--black);
+  background: var(--black2);
+  color: white;
   padding: 10px 30px;
   text-decoration: none;
   text-align: center;
   font-size: 1.2em;
   font-weight: 500;
-  border-radius: 10px;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
+
 .main .banner .content .btn:hover {
-  letter-spacing: 0.5px;
-  background: #d3d1d1;
+  background: var(--black);
 }
+
 .main .banner .content .socialMedia {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin: 20px;
-  color: var(--white);
+  color: var(--black);
 }
+
 .main .banner .content .socialMedia li {
   list-style: none;
 }
+
 .main .banner .content .socialMedia li a {
   display: inline-block;
   width: 40px;
   height: 40px;
-  background-color: var(--white);
+  background-color: rgba(0, 0, 0, 0.1);
+  color: var(--black);
   margin: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-decoration: none;
   font-size: 1.2em;
 }
+
 .main .banner .content .socialMedia li a:hover {
-  background: gray;
-  color: var(--white);
+  background: var(--black2);
+  color: white;
 }
+
 .main .titre {
   text-align: center;
   width: 100%;
-  color: var(--white);
+  color: var(--black);
 }
+
 .main .titre h2 {
   position: relative;
   text-transform: uppercase;
@@ -185,127 +242,189 @@ section {
   font-size: 1.2em;
   margin-bottom: 30px;
 }
+
 .main .titre h2::before {
-  content: "";
+  content: '';
   position: absolute;
   left: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
   bottom: -10px;
   width: 50px;
   height: 1px;
   background: var(--white);
 }
+
 .main .aPropos {
   position: relative;
   min-height: 100vh;
   padding: 0 40px;
   padding-top: 80px;
-  color: var(--white);
+  color: var(--black);
   display: inline-block;
 }
+
 .main .aPropos .content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin-top: 40px;
 }
+
 .main .aPropos .content .textBox {
   width: 49%;
   min-width: 49%;
 }
+
 .main .aPropos .content .imgBox {
   margin-left: 40px;
 }
+
 .main .aPropos .content .imgBox img {
   max-width: 100%;
   border-radius: 20px;
 }
+
 .main .services {
-  color: var(--white);
+  color: var(--black);
   position: relative;
   min-height: 100vh;
   padding: 0 40px;
   padding-top: 80px;
 }
+
 .main .services .title {
   text-align: center;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
+
 .main .services .content {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
   margin: 40px 0;
   gap: 20px;
 }
+
 .main .services .content .serviceBox {
-  border: 1px solid rgba(255, 255, 255, 0.2);
+  border: 1px solid rgba(20, 9, 9, 0.2);
   padding: 50px 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
+
 .main .services .content .serviceBox img {
   max-width: 50px;
-  filter: invert(1);
 }
+
 .main .services .content .serviceBox h2 {
   font-size: 1.1em;
   margin-top: 20px;
   margin-bottom: 10px;
   font-weight: 600;
-  color: var(--white);
+  color: var(--black);
   text-align: center;
   letter-spacing: 2px;
   text-transform: uppercase;
 }
+
 .main .services .content .serviceBox p {
   text-align: center;
 }
+
 .main .portfolio {
-  color: var(--white);
+  color: var(--black);
   padding: 0 40px;
   padding-top: 80px;
 }
+
 .main .portfolio .content {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   margin: 40px 0;
 }
+
 .main .portfolio .content .slideBox {
   position: relative;
-  border: 1px solid rgba(255, 255, 255, 0.2);
+  border: 1px solid rgba(8, 5, 5, 0.2);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   min-height: 200px;
   min-width: 200px;
   overflow-y: hidden;
 }
+
 .main .portfolio .content .slideBox .imgBox img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
   height: 100%;
 }
+
 .main .portfolio .content .slideBox .textBox {
   position: absolute;
   top: 100%;
   min-height: 100%;
   min-width: 100%;
-  background-color: yellow;
-  transition: top 0.5s, background-color 1s;
+  background-color: #31312e;
+  -webkit-transition: top 0.5s , background-color 1s;
+  transition: top 0.5s , background-color 1s;
 }
+
 .main .portfolio .content .slideBox:hover .textBox {
   position: absolute;
   top: 0;
   min-height: 100%;
   min-width: 100%;
-  background-color: #2600ff;
+}
+
+.main .copyright {
+  position: relative;
+  padding: 10px 40px;
+  bottom: 0;
+  text-align: center;
 }
 
 #navigation {
@@ -314,26 +433,81 @@ section {
   left: 0px;
   width: 300px;
   height: 100vh;
-  background: var(--black);
-  border-right: solid 1px rgba(255, 255, 255, 0.1);
+  background: var(--white);
+  border-right: solid 1px rgba(19, 15, 15, 0.2);
   z-index: 1;
-  display: grid;
-  place-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
+
 #navigation.active {
   left: -300px;
 }
-#navigation ul {
+
+#navigation .listes {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  margin: 10px 50px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
 }
-#navigation ul li {
-  list-style: none;
+
+#navigation .listes .num {
+  position: relative;
+  color: var(--black);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-size: 1.2em;
+  font-weight: 600;
+  text-transform: uppercase;
+  min-width: 39px;
+  height: 39px;
+  border-radius: 50%;
+  margin-right: 10px;
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
-#navigation ul li a {
-  color: var(--white);
+
+#navigation .listes .num span {
+  position: relative;
+  font-size: 1.2em;
+  font-weight: 600;
+  color: var(--black);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#navigation .listes .texte {
+  position: relative;
+}
+
+#navigation .listes .texte a {
+  color: var(--black2);
   text-decoration: none;
   display: inline-block;
   font-size: 1.6em;
@@ -342,42 +516,56 @@ section {
   text-transform: uppercase;
 }
 
+#navigation .listes:hover .texte a {
+  color: var(--black);
+}
+
+#navigation .listes::before {
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: -3px;
+  width: 45px;
+  height: 45px;
+  border-radius: 22.5px;
+  background: rgba(128, 128, 128, 0.158);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#navigation .listes:hover::before {
+  width: 105%;
+}
+
 @media (max-width: 767px) {
   .topBar {
     padding: 20px 50px;
   }
-
   .main {
     padding: 100px 50px 150px;
     left: 250px;
     width: calc(100% - 250px);
   }
-
   .banner .content h2 {
     font-size: 1.5em;
   }
-
   .banner .content p, .banner .content a {
     font-size: 1em;
   }
-
   .banner.active {
     width: 100%;
     left: 0px;
   }
-
   #navigation {
     width: 250px;
   }
-
   #navigation.active {
     left: -250px;
   }
-
   #navigation ul li a {
     font-size: 1.6em;
     margin: 5px 0;
   }
 }
-
 /*# sourceMappingURL=styles.css.map */
