--- a/styles.scss
+++ b/styles.scss
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
     
 }
 //déclaration des variable pour el changement entre
@@ -30,10 +31,10 @@ section{
     width: calc(100% - 300px);
     left: 300px;
     min-height: 100vh;
-    background-color: var(--black);
+    background-color: var(--white);
     overflow-x: hidden;
     transition: 0.5s;
-    background-color: var(--black2);
+    
    &.active {
     left: 0;
     width: 100%;
@@ -51,8 +52,8 @@ section{
         padding: 0px 40px;
         z-index: 10000;
         transition: 0.5s;
-        border-bottom: solid 1px rgba(255, 255, 255, 0.1);
-        background-color: var(--black);
+        border-bottom: solid 1px rgba(10, 3, 3, 0.2);
+        background-color: var(--white);
         &.active{
             left: 0;
             width: calc(100%);
@@ -60,7 +61,7 @@ section{
         .logo{
             position: relative;
             font-weight: 700;
-            color: var(--white);
+            color: var(--black);
             text-decoration: none;
             font-size: 2em ;
             text-transform: uppercase;
@@ -80,7 +81,7 @@ section{
             top: 7px;
             width: 100%;
             height: 2px;
-            background:var(--white);
+            background:var(--black);
             
             transition: 0.2s;
         }
@@ -90,7 +91,7 @@ section{
             bottom: 7px;
             width: 100%;
             height: 2px;
-            background:var(--white);
+            background:var(--black);
             
             
         }
@@ -125,16 +126,16 @@ section{
                 }
             }
             h2{
-                color: var(--white);
+                color: var(--black);
                 font-size: 2.5em;
                 span {
-                    color: #40c3FF;
+                    color: var(--black);
                     font-size: 1.2em;
                 }
             }
             p {
                 font-size: 1.2em;
-                color: var(--white);
+                color: var(--black);
                 font-weight: 300;
             
             }
@@ -143,32 +144,34 @@ section{
                 display: inline-block;
                 width: 210px;
                 margin-top: 20px;
-                background: var(--white);
-                color: var(--black);
+                background: var(--black2);
+                color: white;
                 padding: 10px 30px;
                 text-decoration: none;
                 text-align: center;
                 font-size: 1.2em;
                 font-weight: 500;
-                border-radius: 10px;
+                
                 transition: 0.5s;
+                
                 &:hover{
-                    letter-spacing: 0.5px;
-                    background: rgb(211, 209, 209);
+                    
+                    background: var(--black);
                 }
             }
             .socialMedia {
                 position: relative;
                 display: flex;
                 margin: 20px;
-                color: var(--white);
+                color: var(--black);
                 li{
                     list-style: none;
                     a{
                         display: inline-block;
                         width: 40px;
                         height: 40px;
-                        background-color: var(--white);
+                        background-color: rgba(0,0,0, 0.1);
+                        color: var(--black);
                         margin: 5px;
                         display: flex;
                         justify-content: center;
@@ -176,8 +179,8 @@ section{
                         text-decoration: none;
                         font-size: 1.2em;
                         &:hover{
-                            background: gray;
-                            color: var(--white);
+                            background: var(--black2);
+                            color: white;
                         }
                     }
                 }
@@ -189,7 +192,7 @@ section{
     .titre{
             text-align: center;
             width: 100%;
-            color: var(--white);
+            color: var(--black);
             h2 {
                 position: relative;
                 text-transform: uppercase;
@@ -215,7 +218,7 @@ section{
         padding: 0 40px;
         padding-top: 80px;
         
-        color: var(--white);
+        color: var(--black);
         display: inline-block;
         
             
@@ -233,6 +236,7 @@ section{
                 img{
                     max-width: 100%;
                     border-radius: 20px;
+                   
                 }
             }
         }
@@ -240,7 +244,7 @@ section{
     
     //page 3 services
     .services{
-        color: var(--white);
+        color: var(--black);
         position: relative;
         min-height: 100vh;
         padding: 0 40px;
@@ -259,7 +263,7 @@ section{
             margin: 40px 0;
             gap: 20px;
             .serviceBox{
-                border: 1px solid rgba(255, 255, 255,0.2);
+                border: 1px solid rgba(20, 9, 9, 0.2);
                 padding: 50px 20px;
                 display: flex;
                 justify-content: center;
@@ -267,14 +271,14 @@ section{
                 flex-direction: column;
                 img {
                     max-width: 50px;
-                    filter: invert(1);
+                    
                 }
                 h2{
                     font-size: 1.1em;
                     margin-top: 20px;
                     margin-bottom: 10px;
                     font-weight: 600;
-                    color: var(--white);
+                    color: var(--black);
                     text-align: center;
                     letter-spacing: 2px;
                     text-transform: uppercase;
@@ -289,7 +293,7 @@ section{
     }
    //page 4 portfolio
    .portfolio{
-        color: var(--white);
+        color: var(--black);
         
         
         padding: 0 40px;
@@ -301,7 +305,7 @@ section{
             margin: 40px 0;
             .slideBox{
                 position: relative;
-                border: 1px solid rgba(255, 255, 255,0.2);
+                border: 1px solid rgba(8, 5, 5, 0.2);
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -321,7 +325,7 @@ section{
                     top: 100%;
                     min-height: 100%;
                     min-width: 100%;
-                    background-color: yellow;
+                    background-color: rgb(49, 49, 46);
                     transition: top 0.5s , background-color 1s;
                 }
                 &:hover{
@@ -330,49 +334,126 @@ section{
                         top: 0;
                         min-height: 100%;
                         min-width: 100%;
-                        background-color: rgb(38, 0, 255);
+                        
                     } 
                 }
             }
         }
    }
+   .copyright{
+    position: relative;
+    padding: 10px 40px;
+    bottom: 0;  
+    text-align: center;
+}
 }
 
-
+// La barre de gauche
 #navigation {
     position: fixed;
     top: 0;
     left: 0px;
     width: 300px;
     height: 100vh;
-    background: var(--black);
-    border-right: solid 1px rgba(255,255,255,0.1);
+    background: var(--white);
+    border-right: solid 1px rgba(19, 15, 15, 0.2);
     z-index: 1;
-    display: grid;
-    place-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     transition: 0.5s;
     &.active {
         left: -300px;
         
     }
-    ul {
+    .listes {
         position:relative;
         display:flex;
-        flex-direction:column;
-        li {
-            list-style: none;
-            a{
-                color: var(--white);
-                text-decoration: none;
-                display: inline-block;
-                font-size: 1.6em;
-                letter-spacing: 1px;
+        margin: 10px 50px;
+        align-items: center;
+        cursor: pointer;
+        
+       
+        .num{
+            position: relative;
+            color: var(--black);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            font-size: 1.2em;
+            font-weight: 600;
+            text-transform: uppercase;
+            min-width: 39px;
+            height: 39px;
+            // background: white;
+            border-radius: 50%  ;
+            margin-right: 10px;
+            transform: scale(1);
+            span{
+                position: relative;
+                font-size: 1.2em;
                 font-weight: 600;
-                text-transform: uppercase;
+                color: var(--black);
+                transition: 0.5s;
+            }
+                
+            }
+        // .num::before{
+        //     content: "";
+        //     position: absolute;
+        //     height: 35px;
+        //     width: 35px;
+        //     background : var(--white);
+        //     border-radius: 50%;
+        //     transform: scale(0);
+        //     transition: 0.5s;
+        // }
+        // &:hover .num::before{
             
+        //     transform: scale(1);
+            
+        // }
+        .texte{
+            position: relative;
+            a{
+            color: var(--black2);
+            text-decoration: none;
+            display: inline-block;
+            font-size: 1.6em;
+            letter-spacing: 1px;
+            font-weight: 600;
+            text-transform: uppercase;
+            }        
+        }
+        &:hover .texte  {
+            a{
+            color:var(--black);
             }
         }
+        &::before{
+            content: "";
+            position: absolute;
+            top: -3px;
+            left: -3px;
+            width: 45px;
+            height: 45px;
+            border-radius: 22.5px;
+            // background: #1f83f2;
+            background:rgba(128, 128, 128, 0.158);
+            // box-shadow: 5px 5px 5px rgba(0,0,0, 0.25),
+            // inset 2px 2px 5px rgba(255,255,255,0.25),
+            // inset -3px -3px 5px rgba(0,0,0, 0.5);
+            border: 1px solid rgba(0, 0, 0, 0.2);
+            transition: 0.5s;
+        }
+        &:hover::before{
+            width: 105%;
+        }
+        
     }
+    
+    
 }
 
 
