responsive version 1 beta

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,13 @@
   --black2:rgb(75, 74, 74);
 }
 
+.darkMode {
+  --white:#333;
+  --white2:#444;
+  --black:#fff;
+  --black2:#444;
+}
+
 body {
   overflow-x: hidden;
 }
@@ -29,8 +36,7 @@ section {
   width: calc(100% - 300px);
   left: 300px;
   min-height: 100vh;
-  background-color: var(--white);
-  overflow-x: hidden;
+  background-color: var(--white2);
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
@@ -252,7 +258,7 @@ section {
   bottom: -10px;
   width: 50px;
   height: 1px;
-  background: var(--white);
+  background: var(--black);
 }
 
 .main .aPropos {
@@ -339,6 +345,8 @@ section {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  min-height: 350px;
+  min-width: 210px;
 }
 
 .main .services .content .serviceBox img {
@@ -364,6 +372,73 @@ section {
   color: var(--black);
   padding: 0 40px;
   padding-top: 80px;
+}
+
+.main .portfolio .popupPortfolio {
+  position: fixed;
+  top: -150%;
+  left: calc(50% + 150px);
+  -webkit-transform: translate(-50%, -50%) scale(1.5);
+          transform: translate(-50%, -50%) scale(1.5);
+  opacity: 0;
+  background: rgba(0, 0, 0, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  -webkit-box-shadow: inset 0px 0px 20px 5px rgba(255, 255, 255, 0.05);
+          box-shadow: inset 0px 0px 20px 5px rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(30px);
+  width: 450px;
+  padding: 20px 30px;
+  border-radius: 10px;
+  z-index: 10000;
+  -webkit-transition: top 0ms ease-in-out 300ms, opacity 300ms ease-in-out 0ms, width 0.5s, left 0.5s, -webkit-transform 300ms ease-in-out 0ms;
+  transition: top 0ms ease-in-out 300ms, opacity 300ms ease-in-out 0ms, width 0.5s, left 0.5s, -webkit-transform 300ms ease-in-out 0ms;
+  transition: top 0ms ease-in-out 300ms, opacity 300ms ease-in-out 0ms, transform 300ms ease-in-out 0ms, width 0.5s, left 0.5s;
+  transition: top 0ms ease-in-out 300ms, opacity 300ms ease-in-out 0ms, transform 300ms ease-in-out 0ms, width 0.5s, left 0.5s, -webkit-transform 300ms ease-in-out 0ms;
+}
+
+.main .portfolio .popupPortfolio.visible {
+  top: 50%;
+  left: calc(50% + 150px);
+  -webkit-transform: translate(-50%, -50%) scale(1);
+          transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+  -webkit-transition: opacity 300ms ease-in-out 0ms, width 0.5s, left 0.5s, -webkit-transform 300ms ease-in-out 0ms;
+  transition: opacity 300ms ease-in-out 0ms, width 0.5s, left 0.5s, -webkit-transform 300ms ease-in-out 0ms;
+  transition: opacity 300ms ease-in-out 0ms, transform 300ms ease-in-out 0ms, width 0.5s, left 0.5s;
+  transition: opacity 300ms ease-in-out 0ms, transform 300ms ease-in-out 0ms, width 0.5s, left 0.5s, -webkit-transform 300ms ease-in-out 0ms;
+}
+
+.main .portfolio .popupPortfolio.visible.active {
+  left: 50%;
+  width: 600px;
+}
+
+.main .portfolio .popupPortfolio .popUpCloseBtn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 25px;
+  height: 25px;
+  font-size: 18px;
+  text-align: center;
+  line-height: 25px;
+  color: #fdfdfd;
+  background: rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.main .portfolio .popupPortfolio h1 {
+  font-size: 35px;
+  text-align: center;
+  margin: 10px 0px 20px;
+  color: #fff;
+}
+
+.main .portfolio .popupPortfolio p {
+  color: #fdfdfd;
+  font-size: 17px;
 }
 
 .main .portfolio .content {
@@ -393,7 +468,9 @@ section {
           flex-direction: column;
   min-height: 200px;
   min-width: 200px;
-  overflow-y: hidden;
+  max-height: 400px;
+  max-width: 400px;
+  cursor: pointer;
 }
 
 .main .portfolio .content .slideBox .imgBox img {
@@ -405,6 +482,16 @@ section {
 
 .main .portfolio .content .slideBox .textBox {
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: var(--black);
   top: 100%;
   min-height: 100%;
   min-width: 100%;
@@ -421,21 +508,62 @@ section {
 }
 
 .main .copyright {
+  color: var(--black);
   position: relative;
   padding: 10px 40px;
   bottom: 0;
   text-align: center;
 }
 
+.darkMode #navigation .listes .texte a {
+  color: var(--black);
+}
+
+.darkMode #navigation .colorMode::before {
+  content: "\f185";
+  color: white;
+}
+
+.darkMode #navigation .colorMode::after {
+  content: "Switchez vers le mode claire.";
+}
+
+.darkMode .container .main .banner .content .btn {
+  background: var(--white);
+}
+
+.darkMode .container .main .banner .content .btn:hover {
+  background: #2196f2;
+}
+
+.darkMode .container .main .banner .content .socialMedia li a:hover {
+  background: #2196f2;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.darkMode .container .main .services .content .serviceBox {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.darkMode .container .main .services .content .serviceBox:hover {
+  background: #2196f2;
+}
+
+.darkMode .container .main .services .content .serviceBox img {
+  -webkit-filter: invert(1);
+          filter: invert(1);
+}
+
 #navigation {
   position: fixed;
-  top: 0;
+  top: 0px;
   left: 0px;
   width: 300px;
   height: 100vh;
   background: var(--white);
   border-right: solid 1px rgba(19, 15, 15, 0.2);
-  z-index: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -538,34 +666,284 @@ section {
   width: 105%;
 }
 
-@media (max-width: 767px) {
-  .topBar {
-    padding: 20px 50px;
-  }
+#navigation .colorMode {
+  position: absolute;
+  bottom: 10px;
+  left: 40px;
+  height: 30px;
+  width: 30px;
+  background: var(--black2);
+  color: var(--white);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 50%;
+}
+
+#navigation .colorMode::before {
+  content: '\f186';
+  font-family: fontAwesome;
+}
+
+#navigation .colorMode::after {
+  content: "Switchez vers le dark mode.";
+  position: absolute;
+  left: 40px;
+  font-size: 0.7em;
+  color: var(--black);
+  white-space: nowrap;
+  font-weight: 300;
+  letter-spacing: 1px;
+  pointer-events: none;
+}
+
+@media (max-width: 1024px) {
   .main {
     padding: 100px 50px 150px;
-    left: 250px;
-    width: calc(100% - 250px);
-  }
-  .banner .content h2 {
-    font-size: 1.5em;
-  }
-  .banner .content p, .banner .content a {
-    font-size: 1em;
-  }
-  .banner.active {
-    width: 100%;
     left: 0px;
+    width: calc(100%);
+  }
+  .main.active {
+    left: 100%;
+    width: calc(100%);
+  }
+  .main.active .services .content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .main.active .portfolio .content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .main .topBar {
+    left: 0px;
+    width: calc(100%);
+  }
+  .main .services .content {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+  .main .portfolio .content {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+  .main .portfolio .popupPortfolio {
+    width: calc(100% - 40px);
+    left: calc(50%);
+  }
+  .main .portfolio .popupPortfolio.active {
+    left: calc(50% + 125px);
+    width: calc(100% - 290px);
+  }
+  .main .portfolio .popupPortfolio.visible {
+    left: calc(50%);
+  }
+  .main .portfolio .popupPortfolio.visible.active {
+    left: calc(50% + 125px);
+    width: calc(100% - 290px);
   }
   #navigation {
     width: 250px;
-  }
-  #navigation.active {
     left: -250px;
   }
-  #navigation ul li a {
+  #navigation.active {
+    left: 0px;
+  }
+  #navigation .listes {
+    margin: 10px 10px;
+    font-weight: 400;
+    font-size: 0.8em;
+  }
+  #navigation .listes::before {
+    height: 30px;
+    width: 30px;
+    top: 3px;
+    left: 3px;
+  }
+  #navigation .listes:hover::before {
+    width: 100%;
+  }
+  #navigation .listes .num {
+    font-weight: 400;
+    margin-right: 0px;
+  }
+  #navigation .colorMode {
+    left: 20px;
+  }
+  #navigation .colorMode::after {
+    content: "Dark Mode";
+  }
+  .darkMode #navigation .colorMode::after {
+    content: "Light Mode";
+  }
+}
+
+@media (max-width: 767px) {
+  .main {
+    padding: 100px 50px 150px;
+    left: 0px;
+    width: calc(100%);
+  }
+  .main.active {
+    left: 100%;
+    width: calc(100%);
+  }
+  .main .topBar {
+    left: 0px;
+    width: calc(100%);
+  }
+  .main .topBar .logo {
     font-size: 1.6em;
-    margin: 5px 0;
+  }
+  .main .banner .content h2 {
+    font-size: 1.4em;
+    text-align: center;
+  }
+  .main .banner .content p {
+    text-align: center;
+    font-size: 1em;
+  }
+  .main .aPropos {
+    padding: 0;
+    padding-top: 80px;
+  }
+  .main .aPropos .titre h2 {
+    white-space: nowrap;
+  }
+  .main .aPropos .content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+  .main .aPropos .content .textBox {
+    width: 100%;
+    min-width: 100%;
+  }
+  .main .aPropos .content .imgBox {
+    margin-left: 0;
+  }
+  .main .services {
+    padding: 0px;
+    padding-top: 80px;
+  }
+  .main .services .titre h2 {
+    white-space: nowrap;
+  }
+  .main .services .content {
+    margin-left: 40px;
+    margin-right: 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .main .portfolio {
+    padding: 0px;
+    padding-top: 80px;
+  }
+  .main .portfolio .content {
+    margin-left: 40px;
+    margin-right: 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .main .portfolio .popupPortfolio {
+    width: calc(100% - 40px);
+    left: calc(50%);
+  }
+  .main .portfolio .popupPortfolio.active {
+    left: calc(50% + 90px);
+    width: calc(100% - 220px);
+  }
+  .main .portfolio .popupPortfolio.visible.active {
+    left: calc(50% + 90px);
+    width: calc(100% - 220px);
+  }
+  #navigation {
+    width: 180px;
+    left: -100px;
+  }
+  #navigation.active {
+    left: 0px;
+    width: 100%;
+  }
+  #navigation .listes {
+    margin: 10px 10px;
+    font-weight: 400;
+    font-size: 0.8em;
+  }
+  #navigation .listes::before {
+    height: 30px;
+    width: 30px;
+    top: 3px;
+    left: 3px;
+  }
+  #navigation .listes:hover::before {
+    width: 100%;
+  }
+  #navigation .listes .num {
+    font-weight: 400;
+    margin-right: 0px;
+  }
+  #navigation .colorMode {
+    left: 20px;
+  }
+  #navigation .colorMode::after {
+    content: "Dark Mode";
+  }
+  .darkMode #navigation .colorMode::after {
+    content: "Light Mode";
   }
 }
 /*# sourceMappingURL=styles.css.map */
